--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>mt-app</title>
     <link rel="stylesheet" href="static/css/reset.css">
+    <script>
+      var deviceWidth = document.documentElement.clientWidth;
+      if(deviceWidth > 750){ deviceWidth = 750; }
+      document.documentElement.style.fontSize = deviceWidth / 7.5 + 'px';
+    </script>
   </head>
   <body>
     <div id="app"></div>
